--- a/recipes.html
+++ b/recipes.html
@@ -114,19 +114,19 @@
                     </div>
                     <div class="item">
                         <a href="">
-                            <img src="img/meals/Christmas-cake.jpg" alt="Christmas cake"/>
+                            <img src="img/meals/christmas-cake.jpg" alt="Christmas cake"/>
                             <h2>CHRISTMAS CAKE</h2>
                         </a>
                     </div>
                     <div class="item">
                         <a href="">
-                            <img src="img/meals/French-onion.jpg" alt="French onion soup"/>
+                            <img src="img/meals/french-onion.jpg" alt="French onion soup"/>
                             <h2>FRENCH ONION SOUP</h2>
                         </a>
                     </div>
                     <div class="item">
                         <a href="">
-                            <img src="img/meals/Mediterranean-pasta.jpg" alt="Mediterranean salad"/>
+                            <img src="img/meals/mediterranean-pasta.jpg" alt="Mediterranean salad"/>
                             <h2>MEDITERRANEAN SALAD</h2>
                         </a>
                     </div>
